@@ -1,11 +1,11 @@
 /*
- * Copyright 2019 dc-square GmbH
+ * Copyright 2019-present HiveMQ GmbH
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,7 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package com.hivemq.extensions.services.subscription;
 
 import com.google.common.collect.ImmutableList;
@@ -24,15 +23,14 @@ import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.MoreExecutors;
 import com.hivemq.common.shutdown.ShutdownHooks;
-import com.hivemq.configuration.service.FullConfigurationService;
 import com.hivemq.extension.sdk.api.annotations.NotNull;
 import com.hivemq.extension.sdk.api.packets.general.Qos;
 import com.hivemq.extension.sdk.api.services.exception.DoNotImplementException;
 import com.hivemq.extension.sdk.api.services.exception.InvalidTopicException;
 import com.hivemq.extension.sdk.api.services.exception.NoSuchClientIdException;
 import com.hivemq.extension.sdk.api.services.exception.RateLimitExceededException;
-import com.hivemq.extension.sdk.api.services.subscription.SubscriptionsForClientResult;
 import com.hivemq.extension.sdk.api.services.subscription.SubscriptionStore;
+import com.hivemq.extension.sdk.api.services.subscription.SubscriptionsForClientResult;
 import com.hivemq.extension.sdk.api.services.subscription.TopicSubscription;
 import com.hivemq.extensions.iteration.AsyncIterator;
 import com.hivemq.extensions.iteration.AsyncIteratorFactory;
@@ -53,7 +51,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import util.TestConfigurationBootstrap;
 import util.TestException;
 
 import java.util.*;
@@ -849,17 +846,17 @@ public class SubscriptionStoreImplTest {
 
         final SubscriptionStoreImpl.AllSubscribersFetchCallback fetchCallback = new SubscriptionStoreImpl.AllSubscribersFetchCallback(null);
 
-        final ChunkResult<ChunkCursor, SubscriptionsForClientResult> chunkResult = fetchCallback.convertToChunkResult(new MultipleChunkResult<Map<String, Set<Topic>>>(
+        final ChunkResult<ChunkCursor, SubscriptionsForClientResult> chunkResult = fetchCallback.convertToChunkResult(new MultipleChunkResult<Map<String, ImmutableSet<Topic>>>(
                 Map.of(
                         1, new BucketChunkResult<>(Map.of(
-                                "client1", Set.of(
+                                "client1", ImmutableSet.of(
                                         new Topic("topic1", QoS.AT_LEAST_ONCE)
                                 )), true, "client1", 1),
                         2, new BucketChunkResult<>(Map.of(
-                                "client2", Set.of(
+                                "client2", ImmutableSet.of(
                                         new Topic("topic2", QoS.AT_LEAST_ONCE), new Topic("topic3", QoS.AT_LEAST_ONCE)
                                 ),
-                                "client3", Set.of(
+                                "client3", ImmutableSet.of(
                                         new Topic("topic4", QoS.AT_LEAST_ONCE)
                                 )
                         ), false, "client3", 2)
@@ -903,10 +900,10 @@ public class SubscriptionStoreImplTest {
         }
     }
 
-    @NotNull
-    public GlobalManagedPluginExecutorService getManagedExtensionExecutorService() {
-        final FullConfigurationService fullConfigurationService =
-                new TestConfigurationBootstrap().getFullConfigurationService();
-        return new GlobalManagedPluginExecutorService(mock(ShutdownHooks.class));
+    private GlobalManagedPluginExecutorService getManagedExtensionExecutorService() {
+        final GlobalManagedPluginExecutorService globalManagedPluginExecutorService =
+                new GlobalManagedPluginExecutorService(mock(ShutdownHooks.class));
+        globalManagedPluginExecutorService.postConstruct();
+        return globalManagedPluginExecutorService;
     }
 }
